V3085-Mods on Syn P020,P288,P570

--- a/Prevu.Synoptics.V2911_Flex/P020.xaml
+++ b/Prevu.Synoptics.V2911_Flex/P020.xaml
@@ -75,7 +75,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="80" StatusComponent="032-21-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="556" Canvas.Top="142" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="80" StatusComponent="032-21-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="556" Canvas.Top="139" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -205,7 +205,7 @@
     <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="36" Width="31" Canvas.Left="234" Canvas.Top="447"/>
     <Machines:Waste Height="46" Width="44" Canvas.Left="657" Canvas.Top="388" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:Waste Height="46" Width="44" Canvas.Left="749" Canvas.Top="388" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="568" Canvas.Top="62" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="568" Canvas.Top="59" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:CV_Valve.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -215,7 +215,7 @@
         </TransformGroup>
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
-    <Machines:Buffer_belt Height="92" Width="213" Canvas.Left="466" Canvas.Top="121" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
+    <Machines:Buffer_belt Height="92" Width="213" Canvas.Left="466" Canvas.Top="118" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
     <Machines:Radar Height="36" Width="30" Canvas.Left="486" Canvas.Top="130" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="838" Canvas.Top="352" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_Material_Inlet_Outlet Canvas.Left="45" Canvas.Top="229" Height="69" Width="53" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -235,13 +235,13 @@
     <Labels:DeviceLabel 
             ComponentName="020-DEBALER" Canvas.Left="290" Canvas.Top="645" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel 
-            ComponentName="032-01-MA1" Canvas.Left="470" Canvas.Top="210" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            ComponentName="032-01-MA1" Canvas.Left="470" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-            ComponentName="032-41-LT1" Canvas.Left="456" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="032-41-LT1" Canvas.Left="456" Canvas.Top="71" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
             ComponentName="022-01-MA1" Canvas.Left="882" Canvas.Top="290" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="150" Canvas.Top="130" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DetailsLabel ComponentName="032-LUB" DetailsPageName="D032" Canvas.Left="616" Canvas.Top="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="032-LUB" DetailsPageName="D032" Canvas.Left="616" Canvas.Top="57" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
       ComponentName="024-01-MA1" Canvas.Left="1012" Canvas.Top="444" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
