--- a/Prevu.Synoptics.V3085_Anviplas/P288.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P288.xaml
@@ -24,10 +24,10 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="182" Color="Water" StatusComponent="298-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="613" Canvas.Top="242">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="182" Color="Water" StatusComponent="298-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="637" Canvas.Top="237" Height="14">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
-          <ScaleTransform/>
+          <ScaleTransform ScaleY="1"/>
           <SkewTransform/>
           <RotateTransform Angle="90"/>
           <TranslateTransform/>
@@ -68,7 +68,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="61" Color="Water" StatusComponent="283-01-MA1" VisibilityComponent="" Canvas.Left="631" Canvas.Top="354"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="500" StatusComponent="298-01-MA1" Color="Water" Canvas.Left="702" Canvas.Top="152"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="476" StatusComponent="298-01-MA1" Color="Water" Canvas.Left="726" Canvas.Top="152"/>
     <Machines:V01_PSP_Pit Canvas.Left="1114" Canvas.Top="340" Height="162" Width="227" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="298" StatusComponent="298-01-MA1" Color="Water" Canvas.Left="1051" Canvas.Top="289" Icon="Left">
       <Labels:Pipe.RenderTransform>
