--- a/Prevu.Synoptics.V3085_Anviplas/P230.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P230.xaml
@@ -152,8 +152,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="57" RenderTransformOrigin="0.5,0.5" StatusComponent="210-26-CV1" Canvas.Left="132" Canvas.Top="615" />
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="74" RenderTransformOrigin="0.5,0.5"  StatusComponent="210-26-CV1" Canvas.Left="97" Canvas.Top="650" >
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="57" RenderTransformOrigin="0.5,0.5" StatusComponent="210-26-CV1" Canvas.Left="140" Canvas.Top="615" />
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="74" RenderTransformOrigin="0.5,0.5"  StatusComponent="210-26-CV1" Canvas.Left="105" Canvas.Top="650" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -163,9 +163,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="211" RenderTransformOrigin="0.5,0.5" StatusComponent="210-71-ECS1" Canvas.Left="136" Canvas.Top="351" Icon="Right"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="202" RenderTransformOrigin="0.5,0.5" StatusComponent="210-71-ECS1" Canvas.Left="145" Canvas.Top="351" Icon="Right"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="210-25-CV1" Canvas.Left="342" Canvas.Top="561"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="264" RenderTransformOrigin="0.5,0.5" StatusComponent="210-25-CV1" Canvas.Left="220" Canvas.Top="606" Icon="Left" />
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="264" RenderTransformOrigin="0.5,0.5" StatusComponent="210-26-CV1" Canvas.Left="224" Canvas.Top="606" Icon="Left" />
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="137" RenderTransformOrigin="0.5,0.5" StatusComponent="208-01-MA1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="294" Canvas.Top="204"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="172" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="1197" Canvas.Top="141">
       <Labels:Pipe.RenderTransform>
@@ -239,11 +239,11 @@
         </TransformGroup>
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
-    <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="38" Width="50"  RenderTransformOrigin="0.5,0.5" Canvas.Left="181" Canvas.Top="599"/>
+    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="38" Width="50"  RenderTransformOrigin="0.5,0.5" Canvas.Left="189" Canvas.Top="599"/>
     <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="38" Width="50" Canvas.Left="792" Canvas.Top="40"/>
-    <Rectangle HorizontalAlignment="Left" Height="110" Stroke="Black" VerticalAlignment="Center" Width="2" StrokeThickness="2" Canvas.Left="136" Canvas.Top="301" />
-    <Rectangle HorizontalAlignment="Center" Height="3" Stroke="Black" VerticalAlignment="Top" Width="45" StrokeThickness="2" Canvas.Left="112" Canvas.Top="687" />
-    <Machines:External HorizontalAlignment="Left" Height="70" VerticalAlignment="Center" Width="76" RenderTransformOrigin="0.5,0.5" Canvas.Left="99" Canvas.Top="398" >
+    <Rectangle HorizontalAlignment="Left" Height="110" Stroke="Black" VerticalAlignment="Center" Width="2" StrokeThickness="2" Canvas.Left="145" Canvas.Top="301" />
+    <Rectangle HorizontalAlignment="Left" Height="3" Stroke="Black" VerticalAlignment="Center" Width="45" StrokeThickness="2" Canvas.Left="120" Canvas.Top="687" />
+    <Machines:External HorizontalAlignment="Left" Height="70" VerticalAlignment="Center" Width="76" RenderTransformOrigin="0.5,0.5" Canvas.Left="104" Canvas.Top="398" >
       <Machines:External.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -305,18 +305,18 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="210-25-CV1" Canvas.Left="224" Canvas.Top="409" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-26-CV1" Canvas.Left="161" Canvas.Top="548" />
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="210-71-ECS1" Canvas.Left="161" Canvas.Top="288"/>
+            ComponentName="210-26-CV1" Canvas.Left="169" Canvas.Top="548" />
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="210-71-ECS1" Canvas.Left="170" Canvas.Top="288"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="208-01-MA1" Canvas.Left="275" Canvas.Top="143"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="210-71-ECS3" Canvas.Left="33" Canvas.Top="304"/>
+            ComponentName="210-71-ECS3" Canvas.Left="42" Canvas.Top="304"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="210-21-CV1" Canvas.Left="773" Canvas.Top="80"/>
