--- a/Prevu.Synoptics.V2911_Flex/OverallView.xaml
+++ b/Prevu.Synoptics.V2911_Flex/OverallView.xaml
@@ -275,17 +275,17 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="6535" Canvas.Top="2139" Width="737" Color="Water" StatusComponent="373-01-MA1" Height="6" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <local:P020 Canvas.Left="54" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P100 Canvas.Left="1109" Canvas.Top="806" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P140 Canvas.Left="2769" Canvas.Top="155" HorizontalAlignment="Left" Height="846" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P230 Canvas.Left="4490" Canvas.Top="376" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P288 Canvas.Left="2769" Canvas.Top="1801" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P330 Canvas.Left="5853" Canvas.Top="982" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P350 Canvas.Left="7189" Canvas.Top="1623" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P430 Canvas.Left="932" Canvas.Top="2829" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P460 Canvas.Left="2240" Canvas.Top="2972" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P530 Canvas.Left="3569" Canvas.Top="3061" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P810 Canvas.Left="5178" Canvas.Top="2970" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P880 Canvas.Left="6715" Canvas.Top="3221" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P020 CacheMode="BitmapCache" Canvas.Left="54" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P100 CacheMode="BitmapCache" Canvas.Left="1109" Canvas.Top="806" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P140 CacheMode="BitmapCache" Canvas.Left="2769" Canvas.Top="155" HorizontalAlignment="Left" Height="846" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P230 CacheMode="BitmapCache" Canvas.Left="4490" Canvas.Top="376" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P288 CacheMode="BitmapCache" Canvas.Left="2769" Canvas.Top="1801" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P330 CacheMode="BitmapCache" Canvas.Left="5853" Canvas.Top="982" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P350 CacheMode="BitmapCache" Canvas.Left="7189" Canvas.Top="1623" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P430 CacheMode="BitmapCache" Canvas.Left="932" Canvas.Top="2829" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P460 CacheMode="BitmapCache" Canvas.Left="2240" Canvas.Top="2972" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P530 CacheMode="BitmapCache" Canvas.Left="3569" Canvas.Top="3061" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P810 CacheMode="BitmapCache" Canvas.Left="5178" Canvas.Top="2970" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P880 CacheMode="BitmapCache" Canvas.Left="6715" Canvas.Top="3221" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
     </Canvas>
 </UserControl>
