--- a/Prevu.Synoptics.V2911_Flex/Pages/P140.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P140.xaml
@@ -279,7 +279,7 @@
       JumpToLabel="120-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="42" Canvas.Top="76"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            JumpFromLabel="180-01-MA1" 
+            JumpFromLabel="180-01-EC1" 
             JumpToLabel="098-01-MA1" Canvas.Left="601" Canvas.Top="733" Direction="Left"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
